Feat: componente sidebar

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,1 +1,18 @@
-<p>sidebar works!</p>
+<h2>Busquedas</h2>
+<hr />
+<ul class="list-group">
+  <li
+    routerLink=""
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+    class="list-group-item"
+  >
+    buscar pais
+  </li>
+  <li routerLink="region" routerLinkActive="active" class="list-group-item">
+    buscar region
+  </li>
+  <li class="list-group-item" routerLinkActive="active" routerLink="capital">
+    buscar capital
+  </li>
+</ul>
