--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
 <div class="row container mt-4">
   <div class="col-3">
-    <h2>Busquedas</h2>
-    <hr />
-    <ul class="list-group">
-      <li routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="list-group-item">buscar pais</li>
-      <li routerLink="region" routerLinkActive="active" class="list-group-item">buscar region</li>
-      <li class="list-group-item" routerLinkActive="active" routerLink="capital">buscar capital</li>
-    </ul>
+    <app-sidebar></app-sidebar>
   </div>
 
   <div class="col">
