--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -16,11 +16,11 @@
 </div>
 
 <hr>
-<div class="alert alert-danger">
-    No se encontro nada con el termino de busqueda
+<div *ngIf="hayError" class="alert alert-danger">
+    No se encontro nada con el termino de busqueda: {{ termino }}
 </div>
 
-<div class="row">
+<div  *ngIf="!hayError" class="row">
     <div class="col">
         <table class="table table-hover">
             <thead>
