--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -20,7 +20,7 @@
     No se encontro nada con el termino de busqueda: {{ termino }}
 </div>
 
-<div  *ngIf="!hayError" class="row">
+<div  *ngIf="paises.length > 0" class="row">
     <div class="col">
         <table class="table table-hover">
             <thead>
@@ -33,13 +33,15 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Bandera</td>
-                    <td>nombre</td>
-                    <td>4435534534</td>
+                <tr *ngFor="let pais of paises; index as i">
+                    <td>{{ i + 1 }}</td>
                     <td>
-                        <a href="/pais/cost">Ver ...</a>
+                        <img [src]="pais.flags.svg" [alt]="pais.flags.alt" class="small-flag">
+                    </td>
+                    <td>{{ pais.name.common }}</td>
+                    <td>{{ pais.population | number }}</td>
+                    <td>
+                        <a [routerLink]="['/pais', pais.cca2]">Ver ...</a>
                     </td>
                 </tr>
             </tbody>
