--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,15 +3,7 @@
 
 <div class="row">
     <div class="col">
-        <form (ngSubmit)="buscar()" autocomplete="off">
-            <input 
-                type="text" 
-                name="termino"
-                placeholder="Buscar pais..."
-                [(ngModel)]="termino"
-                class="form-control"
-            >
-        </form>
+        <app-pais-input></app-pais-input>
     </div>
 </div>
 
@@ -22,29 +14,6 @@
 
 <div  *ngIf="paises.length > 0" class="row">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Bandera</th>
-                    <th>Nombre</th>
-                    <th>Poblacion</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let pais of paises; index as i">
-                    <td>{{ i + 1 }}</td>
-                    <td>
-                        <img [src]="pais.flags.svg" [alt]="pais.flags.alt" class="small-flag">
-                    </td>
-                    <td>{{ pais.name.common }}</td>
-                    <td>{{ pais.population | number }}</td>
-                    <td>
-                        <a [routerLink]="['/pais', pais.cca2]">Ver ...</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
