--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -5,5 +5,6 @@
         placeholder="Buscar pais..."
         [(ngModel)]="termino"
         class="form-control"
+        (input)="teclaPresionada($event)"
     >
 </form>
