Feat: buscar por capital

--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -2,7 +2,7 @@
     <input 
         type="text" 
         name="termino"
-        placeholder="Buscar pais..."
+        [placeholder]="placeholder"
         [(ngModel)]="termino"
         class="form-control"
         (input)="teclaPresionada($event)"
