--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -14,7 +14,7 @@
             <td>
                 <img [src]="pais.flags.svg" [alt]="pais.flags.alt" class="small-flag">
             </td>
-            <td>{{ pais.name.common }}</td>
+            <td>{{ pais.capital }} | {{ pais.name.common }}</td>
             <td>{{ pais.population | number }}</td>
             <td>
                 <a [routerLink]="['/pais', pais.cca2]">Ver ...</a>
