--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -1,1 +1,46 @@
-<p>ver-pais works!</p>
+<div *ngIf="!pais; else divPais" class="alert alert-info">Espere por favor...</div>
+
+<ng-template #divPais>
+
+    
+    <div class="row">
+        <div class="col-12">
+            <h1>Pais: <small>{{ pais.name.common }}</small></h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-4">
+            <h3>Bandera</h3>
+            <img [src]="pais.flags.svg" alt="" class="img-thumbnail">
+        </div>
+
+        <div class="col">
+            <h3>Informacion:</h3>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <strong>Poblacion</strong> {{ pais.population | number }}
+                </li>
+                <li class="list-group-item">
+                    <strong>Codigo numerico</strong> {{ pais.ccn3 }}
+                </li>
+                <li class="list-group-item">
+                    <strong>Codigo alpha 3</strong> {{ pais.cca3 }}
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <h3>Traducciones</h3>
+    <div class="row">
+        <div class="col">
+            <span class="badge bg-primary me-1">{{ pais.translations['spa'].official }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations['ara'].official }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations['cym'].official }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations['deu'].official }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations['est'].official }}</span>
+            <span class="badge bg-primary me-1">{{ pais.translations['fra'].official }}</span>
+        </div>
+    </div>
+    
+</ng-template>
