--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,5 +1,5 @@
 <h3>Buscar por region <small>{{ regionActiva | titlecase }}</small></h3>
-
+<hr>
 <h5>Seleccione la region</h5>
 
 <!-- [class.btn-primary]="region === regionActiva" -->
@@ -19,5 +19,16 @@
         >
             {{ region | titlecase }}
         </button>
+    </div>
+</div>
+
+<br>
+<div *ngIf="hayError" class="alert alert-danger">
+    No se encontro nada con el termino de busqueda: {{ regionActiva }}
+</div>
+
+<div  *ngIf="paises.length > 0" class="row">
+    <div class="col">
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
