Feat: animaciones css

--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,24 +1,27 @@
-<h3>Buscar por region <small>{{ regionActiva | titlecase }}</small></h3>
-<hr>
-<h5>Seleccione la region</h5>
+<div class="animate__animated animate__fadeIn animate__faster">
 
-<!-- [class.btn-primary]="region === regionActiva" -->
-
-<!-- [ngClass]="{
-    'btn-primary': region === regionActiva,
-    'btn-outline-primary': region !== regionActiva
-}" -->
-
-
-<div class="row">
-    <div class="col">
-        <button 
-            *ngFor="let region of regiones" 
-            [class]="getClass(region)" 
-            (click)="activaRegion(region)"
-        >
-            {{ region | titlecase }}
-        </button>
+    <h2>Buscar por region <small>{{ regionActiva | titlecase }}</small></h2>
+    <hr>
+    <h5>Seleccione la region</h5>
+    
+    <!-- [class.btn-primary]="region === regionActiva" -->
+    
+    <!-- [ngClass]="{
+        'btn-primary': region === regionActiva,
+        'btn-outline-primary': region !== regionActiva
+    }" -->
+    
+    
+    <div class="row">
+        <div class="col">
+            <button 
+                *ngFor="let region of regiones" 
+                [class]="getClass(region)" 
+                (click)="activaRegion(region)"
+            >
+                {{ region | titlecase }}
+            </button>
+        </div>
     </div>
 </div>
 
