--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,13 +1,16 @@
-<h2>Por Pais</h2>
-<hr>
-
-<div class="row">
-    <div class="col">
-        <app-pais-input (onEnter)="buscar( $event )" (onDebounce)="sugerencias($event)" placeholder="Buscar por pais..."></app-pais-input>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por Pais</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-pais-input (onEnter)="buscar( $event )" (onDebounce)="sugerencias($event)" placeholder="Buscar por pais..."></app-pais-input>
+        </div>
     </div>
-</div>
+    
+    <hr>
 
-<hr>
+</div>
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontro nada con el termino de busqueda: {{ termino }}
 </div>
